[38102] Avoid link as grid-area, instead wrap in element
If the link is the grid-area, it grows in size and expands the clickable area.
Instead, wrap it in an element.

Also fixes the underline missing due to an overflow: hidden

https://community.openproject.org/work_packages/38102

--- a/frontend/src/app/features/in-app-notifications/entry/in-app-notification-entry.component.sass
+++ b/frontend/src/app/features/in-app-notifications/entry/in-app-notification-entry.component.sass
@@ -58,8 +58,13 @@ $ian-bg-hover-color: #F1F8FF
   &--project
     grid-area: project
     font-size: 0.8rem
-    color: var(--gray-dark)
     @include text-shortener
+
+  &--project-link
+    color: var(--gray-dark)
+    // Set line-height to show underline
+    // which is otherwise swallowed by overflow
+    line-height: 1.1
 
   &--reason,
   &--date
